--- a/nat-server/Cargo.toml
+++ b/nat-server/Cargo.toml
@@ -16,3 +16,10 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 derive_more="0.99.17"
 actix-files="0.6.2"
+
+sea-orm ="0.11.3"
+
+api={path="api"}
+
+[workspace]
+members = [".", "api", "service", "entity"]
