--- a/nat-common/Cargo.toml
+++ b/nat-common/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1", features = ["full"] }
 derive_more="0.99.17"
 enum_index = "0.2.0"
 enum_index_derive = "0.2.0"
+serial_test ="2.0.0"
