--- a/nat-server/my-service/Cargo.toml
+++ b/nat-server/my-service/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 my-entity = { path = "../my-entity" }
 actix-rt = "2.2" # <-- Runtime for actix
 sea-orm= {version = "0.11.3", features = ["debug-print", "runtime-tokio-native-tls","sqlx-mysql"]}
-#tokio = { version = "1.20.0", features = ["macros", "rt"] }
-
+tokio = { version = "1.20.0", features = ["macros", "rt"] }
+nat-common={path="../../nat-common"}
+bincode="1.3.3"
 
