--- a/nat-server/my-api/Cargo.toml
+++ b/nat-server/my-api/Cargo.toml
@@ -20,3 +20,6 @@ log="0.4.17"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 my-entity = { path = "../my-entity" }
 my-service = { path = "../my-service" }
+nat-common={path="../../nat-common"}
+bincode="1.3.3"
+tokio = { version = "1", features = ["full"] }
