optimize fn start in my-api

--- a/nat-server/.env
+++ b/nat-server/.env
@@ -1,4 +1,8 @@
-HOST=127.0.0.1
-PORT=8080
+WEB_HOST=127.0.0.1
+WEB_PORT=8080
 DATABASE_URL="mysql://root:zxl8523551@localhost:3306/secendsell"
 LOG_LEVEL="debug"
+
+
+TCP_HOST = 127.0.0.1
+TCP_PORT = 9999
