--- a/nat-server/my-api/Cargo.toml
+++ b/nat-server/my-api/Cargo.toml
@@ -23,3 +23,4 @@ my-service = { path = "../my-service" }
 nat-common={path="../../nat-common"}
 bincode="1.3.3"
 tokio = { version = "1", features = ["full"] }
+derive_more="0.99.17"
