--- a/nat-server/my-api/Cargo.toml
+++ b/nat-server/my-api/Cargo.toml
@@ -11,6 +11,7 @@ actix-http = "3"
 actix-rt = "2.7"
 actix-service = "2"
 actix-web = "4"
+actix = "0.13.0"
 tera = "1.15.0"
 dotenvy = "0.15.7"
 listenfd = "0.5"
