--- a/nat-server/my-api/Cargo.toml
+++ b/nat-server/my-api/Cargo.toml
@@ -25,3 +25,4 @@ nat-common={path="../../nat-common"}
 bincode="1.3.3"
 tokio = { version = "1", features = ["full"] }
 derive_more="0.99.17"
+async-trait="0.1.68"
